--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,10 +73,11 @@ environment:
 
 init:
   - git config --global core.autocrlf input
-  - set PATH=C:\cygwin64\bin;%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%EXTRAS_FOLDER%\lib\engines-3;%EXTRAS_FOLDER%\lib\ossl-modules;%PATH%
+  - set PATH=C:\cygwin64\bin;%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%EXTRAS_FOLDER%\lib\ossl-modules;%PATH%
   - set XMLSEC_INCLUDE=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE%
   - set XMLSEC_LIB=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
-    
+  - set OPENSSL_MODULES=%EXTRAS_FOLDER%\lib\ossl-modules
+
 install:
   - call "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvars64.bat"
   - mkdir %EXTRAS_FOLDER% && cd %EXTRAS_FOLDER%
