--- a/tests/openssl3.cnf
+++ b/tests/openssl3.cnf
@@ -8,9 +8,9 @@ providers = provider_sect
 
 # List of providers to load
 [provider_sect]
-default = default_sect
-legacy = legacy_sect
-#null = null_sect
+#default = default_sect
+#legacy = legacy_sect
+null = null_sect
 
 [default_sect]
 activate = 1
