--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -148,7 +148,7 @@ jobs:
     - run: mkdir build
     - name: configure
       working-directory: build
-      run: pwd && ../autogen.sh --build="${{ matrix.arch }}-w64-mingw32" --host="${{ matrix.arch }}-w64-mingw32" --enable-unicode=${{ matrix.unicode }} --enable-static-linking=${{ matrix.static_linking }} --enable-mscrypto --enable-mscng
+      run: pwd && ../autogen.sh --build="${{ matrix.arch }}-w64-mingw32" --host="${{ matrix.arch }}-w64-mingw32" --enable-unicode=${{ matrix.unicode }} --enable-static-linking=${{ matrix.static_linking }} --enable-pedantic --enable-mscrypto --enable-mscng
     - name: make
       working-directory: build
       run: make
