--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -13,9 +13,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - config_flags: --enable-static-linking=yes --enable-size-t=yes
-          - config_flags: --enable-static-linking=yes --enable-size-t=no
-          - config_flags: --enable-static-linking=no --enable-size-t=no
+          - config_flags:
+          - config_flags: --enable-size-t=yes
+          - config_flags: --enable-static-linking=yes --without-nss --without-gcrypt --without-gnutls
     steps:
     - name: install dependencies
       run: |
@@ -41,9 +41,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - config_flags: --enable-static-linking=yes --enable-size-t=yes
-          - config_flags: --enable-static-linking=yes --enable-size-t=no
-          - config_flags: --enable-static-linking=no --enable-size-t=no
+          - config_flags:
+          - config_flags: --enable-size-t=yes
+          - config_flags: --enable-static-linking=yes --without-nss --without-gcrypt --without-gnutls
     steps:
     - name: install dependencies
       run: |
@@ -71,16 +71,15 @@ jobs:
     - name: make check
       working-directory: build
       run: LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH" make check
-      
+
   check-osx:
     runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
         include:
-          - config_flags: --enable-static-linking=yes --enable-size-t=yes
-          - config_flags: --enable-static-linking=yes --enable-size-t=no
-          - config_flags: --enable-static-linking=no --enable-size-t=no
+          - config_flags:
+          - config_flags: --enable-size-t=yes
     steps:
     - name: install dependencies
       run: |
