--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -91,7 +91,7 @@ jobs:
     - run: mkdir build
     - name: configure
       working-directory: build
-      run: ../autogen.sh --enable-werror --enable-pedantic  ${{ matrix.config_flags }}
+      run: ../autogen.sh --enable-werror --enable-pedantic  ${{ matrix.config_flags }} --without-gcrypt --without-gnutls
     - name: make
       working-directory: build
       run: make
