--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,14 +36,19 @@ environment:
 
   matrix:
     - COMPILER: MSVC22
-      CRYPTO: openssl-110,mscrypto,mscng
+      CRYPTO: mscrypto
       WITH_DL: yes
       UNICODE: yes
 
     - COMPILER: MSVC22
-      CRYPTO: openssl-110,mscrypto,mscng
+      CRYPTO: mscng
       WITH_DL: yes
-      UNICODE: no
+      UNICODE: yes
+
+    - COMPILER: MSVC22
+      CRYPTO: openssl-110
+      WITH_DL: yes
+      UNICODE: yes
 
     - COMPILER: MSVC22
       CRYPTO: openssl-300
@@ -53,7 +58,12 @@ environment:
     - COMPILER: MSVC22
       CRYPTO: mscrypto
       WITH_DL: no
-      UNICODE: yes
+      UNICODE: no
+
+    - COMPILER: MSVC22
+      CRYPTO: mscng
+      WITH_DL: no
+      UNICODE: no
 
 init:
   - git config --global core.autocrlf input
