--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -42,13 +42,13 @@ jobs:
         7z x ${{ env.LIBXML2_FILE }}
         Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.LIBXSLT_FILE }} -O ${{ env.LIBXSLT_FILE }}
         7z x ${{ env.LIBXSLT_FILE }}
-        if [ ${{ matrix.crypto }} = "openssl-300" ]; then
+        if(${{ matrix.crypto }} -like "*openssl-300*") {
             Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.OPENSSL300_FILE }} -O ${{ env.OPENSSL300_FILE }}
             7z x ${{ env.OPENSSL300_FILE }}
-        elif [ ${{ matrix.crypto }} = "openssl-110" ]; then
+        } elseif(${{ matrix.crypto }} -like "*openssl-300*") {
             Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.OPENSSL110_FILE }} -O ${{ env.OPENSSL110_FILE }}
             7z x ${{ env.OPENSSL110_FILE }}
-        fi
+        }
     - run: git config --global core.autocrlf input
       shell: bash
     - uses: actions/checkout@v2
