--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -42,10 +42,10 @@ jobs:
         7z x ${{ env.LIBXML2_FILE }}
         Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.LIBXSLT_FILE }} -O ${{ env.LIBXSLT_FILE }}
         7z x ${{ env.LIBXSLT_FILE }}
-        if(${{ matrix.crypto }} -like "*openssl-300*") {
+        if("${{ matrix.crypto }}" -like "*openssl-300*") {
             Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.OPENSSL300_FILE }} -O ${{ env.OPENSSL300_FILE }}
             7z x ${{ env.OPENSSL300_FILE }}
-        } elseif(${{ matrix.crypto }} -like "*openssl-300*") {
+        } elseif("${{ matrix.crypto }}" -like "*openssl-300*") {
             Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.OPENSSL110_FILE }} -O ${{ env.OPENSSL110_FILE }}
             7z x ${{ env.OPENSSL110_FILE }}
         }
