--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -27,14 +27,19 @@ jobs:
     - run: mkdir build
     - name: configure
       working-directory: build
-      run: ../autogen.sh --enable-werror --enable-pedantic ${{ matrix.config_flags }}
+      run: |
+          ../autogen.sh --enable-werror --enable-pedantic \
+              ${{ matrix.config_flags }}
     - name: make
       working-directory: build
-      run: make
+      run: |
+          make
     - name: make check
       working-directory: build
-      run: make check
-  
+      run: |
+          make check
+
+
   check-ubuntu-openssl3:
     runs-on: ubuntu-22.04
     strategy:
@@ -64,16 +69,25 @@ jobs:
           sudo make install
     - name: configure
       working-directory: build
-      run: LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH" ../autogen.sh --with-openssl=/usr/local/openssl3 --enable-werror --enable-pedantic  ${{ matrix.config_flags }}
+      run: |
+          export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
+          ../autogen.sh --enable-werror --enable-pedantic \
+              --with-openssl=/usr/local/openssl3  \
+              ${{ matrix.config_flags }}
     - name: make
       working-directory: build
-      run: make
+      run: |
+          make
     - name: make check
       working-directory: build
-      run: LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH" make check
+      run: |
+          export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
+          make check
+
+
 
   check-osx:
-    runs-on: macos-latest
+    runs-on: macos-12
     strategy:
       fail-fast: false
       matrix:
@@ -91,16 +105,22 @@ jobs:
     - run: mkdir build
     - name: configure
       working-directory: build
-      run: ../autogen.sh --enable-werror --enable-pedantic  ${{ matrix.config_flags }} --without-gcrypt --without-gnutls
+      run: |
+          ../autogen.sh --enable-werror --enable-pedantic  \
+              --without-gcrypt --without-gnutls \
+              ${{ matrix.config_flags }}
     - name: make
       working-directory: build
-      run: make
+      run: |
+          make
     - name: make check
       working-directory: build
-      run: make check
-  
+      run: |
+          make check
+
+
   check-mingw:
-    runs-on: windows-latest
+    runs-on: windows-2022
     strategy:
       fail-fast: false
       matrix:
@@ -134,16 +154,95 @@ jobs:
           mingw-w64-${{ matrix.arch }}-libxslt
           mingw-w64-${{ matrix.arch }}-libltdl
           mingw-w64-${{ matrix.arch }}-openssl
-    - run: git config --global core.autocrlf input
+    - run: |
+          git config --global core.autocrlf input
       shell: bash
     - uses: actions/checkout@v2      
-    - run: mkdir build
+    - run: |
+          mkdir build
     - name: configure
       working-directory: build
-      run: pwd && ../autogen.sh --enable-pedantic --enable-pedantic --build="${{ matrix.arch }}-w64-mingw32" --host="${{ matrix.arch }}-w64-mingw32" --enable-mscrypto --enable-mscng ${{ matrix.config_flags }}
+      run: |
+          ../autogen.sh --enable-pedantic --enable-werror \
+              --enable-mscrypto --enable-mscng ${{ matrix.config_flags }} \
+              --build="${{ matrix.arch }}-w64-mingw32" \
+              --host="${{ matrix.arch }}-w64-mingw32"
     - name: make
       working-directory: build
-      run: make
+      run: |
+          make
     - name: make check
       working-directory: build
-      run: make check
+      run: |
+          make check
+
+
+  check-msvc:
+    runs-on: windows-2022
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - crypto: mscrypto
+            config_flags: unicode=yes with-dl=yes
+          - crypto: mscng
+            config_flags: unicode=yes with-dl=yes
+          - crypto: openssl-110
+            config_flags: unicode=yes with-dl=yes
+          - crypto: mscrypto
+            config_flags: unicode=no with-dl=no
+          - crypto: mscng
+            config_flags: unicode=no with-dl=no
+    env:
+      VISUAL_STUDIO_ROOT: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise"
+      EXTRAS_FOLDER: C:\extras
+      EXTRAS_URL: https://www.aleksey.com/xmlsec/download/extras
+      LIBXML2_FILE: libxml2-2.9.8-noiconv-win-x64.7z
+      LIBXSLT_FILE: libxslt-1.1.32-noiconv-win-x64.7z
+      OPENSSL300_FILE: openssl-3.0.3-win-x64.7z
+      OPENSSL110_FILE: openssl-1.1.1o-win-x64.7z
+    steps:
+    - name: install dependencies
+      run: |
+          mkdir ${{ env.EXTRAS_FOLDER }}
+          cd ${{ env.EXTRAS_FOLDER }}
+          Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.LIBXML2_FILE }} -O ${{ env.LIBXML2_FILE }}
+          7z x ${{ env.LIBXML2_FILE }}
+          Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.LIBXSLT_FILE }} -O ${{ env.LIBXSLT_FILE }}
+          7z x ${{ env.LIBXSLT_FILE }}
+          if("${{ matrix.crypto }}" -like "*openssl-300*") {
+              Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.OPENSSL300_FILE }} -O ${{ env.OPENSSL300_FILE }}
+              7z x ${{ env.OPENSSL300_FILE }}
+          } elseif("${{ matrix.crypto }}" -like "*openssl-110*") {
+              Invoke-WebRequest ${{ env.EXTRAS_URL }}/${{ env.OPENSSL110_FILE }} -O ${{ env.OPENSSL110_FILE }}
+              7z x ${{ env.OPENSSL110_FILE }}
+          }
+    - run: |
+          git config --global core.autocrlf input
+      shell: bash
+    - uses: actions/checkout@v2
+    - name: configure
+      working-directory: win32
+      shell: cmd
+      run: |
+          call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
+          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;;%PATH%
+          cscript configure.js pedantic=yes werror=yes static=yes iconv=no \
+              crypto=${{ matrix.crypto }} ${{ matrix.config_flags }} \
+              prefix=${{ env.EXTRAS_FOLDER }} \
+              include=${{ env.EXTRAS_FOLDER }}\include;${{ env.EXTRAS_FOLDER }}\include\libxml2;%MSSDK_INCLUDE% \
+              lib=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;%MSSDK_LIB%
+    - name: make
+      working-directory: win32
+      shell: cmd
+      run: |
+          call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
+          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;;%PATH%
+          nmake
+    - name: make check
+      working-directory: win32
+      shell: cmd
+      run: |
+          call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
+          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;%PATH%
+          nmake check
