--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -7,201 +7,14 @@ on:
     branches: [ master ]
 
 jobs:
-  check-ubuntu:
-    runs-on: ubuntu-22.04
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - config_flags:
-          - config_flags: --enable-size-t=yes
-          - config_flags: --enable-static-linking=yes --without-nss --without-gcrypt --without-gnutls
-    steps:
-    - name: install dependencies
-      run: |
-          sudo apt update
-          sudo apt install automake autoconf libtool libtool-bin libltdl-dev libltdl7
-          sudo apt install libxml2 libxml2-dev libxslt1.1 libxslt1-dev
-          sudo apt install libssl1.1 libssl-dev libnspr4 libnspr4-dev libnss3 libnss3-dev libnss3-tools libgcrypt20 libgcrypt20-dev libgnutls28-dev
-    - uses: actions/checkout@v2
-    - name: create-build-dirs
-      run: |
-          mkdir build
-    - name: configure
-      working-directory: build
-      run: |
-          ../autogen.sh --enable-werror --enable-pedantic \
-              ${{ matrix.config_flags }}
-    - name: make
-      working-directory: build
-      run: |
-          make
-    - name: make check
-      working-directory: build
-      run: |
-          make check
-
-
-  check-ubuntu-openssl3:
-    runs-on: ubuntu-22.04
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - config_flags:
-          - config_flags: --enable-size-t=yes
-          - config_flags: --enable-static-linking=yes --without-nss --without-gcrypt --without-gnutls
-    steps:
-    - name: install dependencies
-      run: |
-          sudo apt update
-          sudo apt install automake autoconf libtool libtool-bin libltdl-dev libltdl7
-          sudo apt install libxml2 libxml2-dev libxslt1.1 libxslt1-dev
-          sudo apt install wget
-    - uses: actions/checkout@v2
-    - name: create-build-dirs
-      run: |
-          mkdir openssl3-build build
-    - name: build-openssl3
-      working-directory: openssl3-build
-      run: |
-          wget  https://www.openssl.org/source/openssl-3.0.3.tar.gz
-          tar xfvz openssl-3.0.3.tar.gz
-          cd openssl-3.0.3
-          ./Configure --prefix=/usr/local/openssl3
-          make
-          sudo make install
-    - name: configure
-      working-directory: build
-      run: |
-          export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
-          ../autogen.sh --enable-werror --enable-pedantic \
-              --with-openssl=/usr/local/openssl3  \
-              ${{ matrix.config_flags }}
-    - name: make
-      working-directory: build
-      run: |
-          make
-    - name: make check
-      working-directory: build
-      run: |
-          export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
-          make check
-
-
-
-  check-osx:
-    runs-on: macos-12
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - config_flags:
-          - config_flags: --enable-size-t=yes
-    steps:
-    - name: install dependencies
-      run: |
-          brew update
-          brew install automake autoconf libtool
-          # brew install libxml2 libxslt libgcrypt
-          brew install openssl nspr nss        
-    - uses: actions/checkout@v2
-    - name: create-build-dirs
-      run: |
-          mkdir build
-    - name: configure
-      working-directory: build
-      run: |
-          ../autogen.sh --enable-werror --enable-pedantic  \
-              --without-gcrypt --without-gnutls \
-              ${{ matrix.config_flags }}
-    - name: make
-      working-directory: build
-      run: |
-          make
-    - name: make check
-      working-directory: build
-      run: |
-          make check
-
-
-  check-mingw:
-    runs-on: windows-2022
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - msystem: MINGW64
-            arch: x86_64
-            config_flags: --enable-unicode=yes --enable-size-t=yes
-          - msystem: MINGW64
-            arch: x86_64
-            config_flags: --enable-unicode=yes --enable-size-t=no
-          - msystem: MINGW64
-            arch: x86_64
-            config_flags: --enable-unicode=no --enable-size-t=no
-    defaults:
-      run:
-        shell: msys2 {0}  
-    steps:
-    - uses: msys2/setup-msys2@v2
-      with:
-        msystem: ${{ matrix.msystem }}
-        release: false  
-        update: false
-        install: >-
-          autoconf
-          automake
-          base-devel
-          git
-          libtool
-          mingw-w64-${{ matrix.arch }}-toolchain
-          mingw-w64-${{ matrix.arch }}-libxml2
-          mingw-w64-${{ matrix.arch }}-libxslt
-          mingw-w64-${{ matrix.arch }}-libltdl
-          mingw-w64-${{ matrix.arch }}-openssl
-    - name: configure-git
-      run: |
-          git config --global core.autocrlf input
-      shell: bash
-    - uses: actions/checkout@v2
-    - name: create-build-dirs
-      run: |
-          mkdir build
-      shell: bash
-    - name: configure
-      working-directory: build
-      run: |
-          ../autogen.sh --enable-pedantic \
-              --enable-mscrypto --enable-mscng ${{ matrix.config_flags }} \
-              --build="${{ matrix.arch }}-w64-mingw32" \
-              --host="${{ matrix.arch }}-w64-mingw32"
-    - name: make
-      working-directory: build
-      run: |
-          make
-    - name: make check
-      working-directory: build
-      run: |
-          make check
-
-
   check-msvc:
     runs-on: windows-2022
     strategy:
       fail-fast: false
       matrix:
         include:
-          - crypto: mscrypto
+          - crypto: openssl-300
             config_flags: unicode=yes with-dl=yes
-          - crypto: mscng
-            config_flags: unicode=yes with-dl=yes
-          - crypto: openssl-110
-            config_flags: unicode=yes with-dl=yes
-          - crypto: mscrypto
-            config_flags: unicode=no with-dl=no
-          - crypto: mscng
-            config_flags: unicode=no with-dl=no
     env:
       VISUAL_STUDIO_ROOT: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise"
       EXTRAS_FOLDER: C:\extras
@@ -239,7 +52,8 @@ jobs:
       shell: cmd
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
-          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;;%PATH%
+          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;%PATH%
+          echo %PATH%
           cscript configure.js pedantic=yes werror=yes static=yes iconv=no ^
               crypto=${{ matrix.crypto }} ${{ matrix.config_flags }} ^
               prefix=${{ env.EXTRAS_FOLDER }} ^
@@ -250,7 +64,7 @@ jobs:
       shell: cmd
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
-          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;;%PATH%
+          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;%PATH%
           nmake
     - name: make check
       working-directory: win32
