--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -53,7 +53,7 @@ jobs:
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
           set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;%PATH%
-          cscript configure.js pedantic=yes werror=yes static=yes iconv=no ^
+          cscript configure.js pedantic=yes werror=yes static=no iconv=no ^
               crypto=${{ matrix.crypto }} ${{ matrix.config_flags }} ^
               prefix=${{ env.EXTRAS_FOLDER }} ^
               include=${{ env.EXTRAS_FOLDER }}\include;${{ env.EXTRAS_FOLDER }}\include\libxml2;%MSSDK_INCLUDE% ^
