--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         include:
           - crypto: openssl-300
-            config_flags: unicode=yes with-dl=yes
+            config_flags: unicode=no with-dl=yes
     env:
       VISUAL_STUDIO_ROOT: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise"
       EXTRAS_FOLDER: C:\extras
@@ -53,7 +53,7 @@ jobs:
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
           set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;%PATH%
-          cscript configure.js pedantic=yes werror=yes static=no iconv=no ^
+          cscript configure.js pedantic=yes static=no iconv=no ^
               crypto=${{ matrix.crypto }} ${{ matrix.config_flags }} ^
               prefix=${{ env.EXTRAS_FOLDER }} ^
               include=${{ env.EXTRAS_FOLDER }}\include;${{ env.EXTRAS_FOLDER }}\include\libxml2;%MSSDK_INCLUDE% ^
