--- a/tests/openssl3.cnf
+++ b/tests/openssl3.cnf
@@ -1,10 +1,12 @@
 # Use this in order to automatically load providers.
 openssl_conf = openssl_init
+
 # Comment out the next line to ignore configuration errors
 config_diagnostics = 1
 
 [openssl_init]
 providers = provider_sect
+engines = engine_section
 
 # List of providers to load
 [provider_sect]
@@ -21,3 +23,12 @@ activate = 1
 [null_sect]
 activate = 1
 
+# List of engines to load
+[engine_section]
+#gost = gost_section
+
+[gost_section]
+engine_id = gost
+dynamic_path = (path to openssl)/lib64/engines-3/gost.so
+default_algorithms = ALL
+init = 1
