--- a/tests/keys/openssl.cnf
+++ b/tests/keys/openssl.cnf
@@ -26,12 +26,11 @@ engines = engine_section
 
 # List of engines to load
 [engine_section]
-gost = gost_section
+# gost = gost_section
 
 [gost_section]
 engine_id = gost
-# dynamic_path = (path to openssl)/gost.so
-dynamic_path = /home/aleksey/local/openssl3.0.2/lib64/engines-3/gost.so
+dynamic_path = (path to openssl)/gost.so
 default_algorithms = ALL
 init = 1
 
