--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -360,9 +360,14 @@ CFLAGS = $(CFLAGS) /D "HAVE_STDIO_H" /D "HAVE_STDLIB_H"
 CFLAGS = $(CFLAGS) /D "HAVE_STRING_H" /D "HAVE_CTYPE_H"
 CFLAGS = $(CFLAGS) /D "HAVE_MALLOC_H" /D "HAVE_MEMORY_H"
 CFLAGS = $(CFLAGS) /D "XMLSEC_NO_GOST" /D "XMLSEC_NO_GOST2012"
-CFLAGS = $(CFLAGS) /D "XMLSEC_NO_SIZE_T"
 CFLAGS = $(CFLAGS) /I$(BASEDIR) /I$(BASEDIR)\include
 CFLAGS = $(CFLAGS) /I$(INCPREFIX)
+
+!if "$(WITH_SIZE_T)" == "1"
+CFLAGS = $(CFLAGS)
+!else
+CFLAGS = $(CFLAGS) /D "XMLSEC_NO_SIZE_T"
+!endif
 
 !if "$(PEDANTIC)" == "1"
 CFLAGS = $(CFLAGS) /W4
