--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -31,6 +31,7 @@ jobs:
       working-directory: build
       run: |
           ../autogen.sh --enable-werror --enable-pedantic \
+              
               ${{ matrix.config_flags }}
     - name: make
       working-directory: build
@@ -66,6 +67,7 @@ jobs:
       run: |
           export LD_LIBRARY_PATH="/usr/local/openssl3/lib:/usr/local/openssl3/lib64:$LD_LIBRARY_PATH"
           ../autogen.sh --enable-werror --enable-pedantic \
+              --enable-md5 --enable-sha1 --enable-des \
               ${{ matrix.config_flags }}
     - name: make
       working-directory: build
@@ -101,6 +103,7 @@ jobs:
       run: |
           ../autogen.sh --enable-werror --enable-pedantic  \
               --without-gcrypt --without-gnutls \
+              --enable-md5 --enable-sha1 --enable-des \
               ${{ matrix.config_flags }}
     - name: make
       working-directory: build
@@ -161,6 +164,7 @@ jobs:
       run: |
           ../autogen.sh --enable-werror  --enable-pedantic \
               --enable-mscrypto --enable-mscng ${{ matrix.config_flags }} \
+              --enable-md5 --enable-sha1 --enable-des \
               --build="${{ matrix.arch }}-w64-mingw32" \
               --host="${{ matrix.arch }}-w64-mingw32"
     - name: make
